# myrtio-light-composer

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  rustfmt.toml
.github/workflows/: qa.yaml
examples/preview/: Cargo.toml
examples/preview/src/: main.rs
lib/: Cargo.toml
lib/src/: command.rs  engine.rs  lib.rs  operation.rs  transition.rs
lib/src/color/: mod.rs
lib/src/effect/: brightness.rs  color_correction.rs  mod.rs  rainbow.rs  static_color.rs  velvet_analog.rs
lib/src/filter/: brightness.rs  mod.rs
lib/src/mode/: mod.rs  rainbow.rs  static_color.rs  velvet_analog.rs
preview/: Cargo.toml
preview/src/: main.rs
src/: bounds.rs  channel.rs  frame_scheduler.rs  gamma.rs  intent_processor.rs  lib.rs  math8.rs  operation.rs  renderer.rs  transition.rs
src/color/: gradient.rs  kelvin.rs  mod.rs  utils.rs
src/effect/: aurora.rs  flow.rs  mod.rs  rainbow.rs  static_color.rs  velvet_analog.rs
src/filter/: brightness.rs  color_correction.rs  mod.rs
tests/: color.rs  effect_id.rs  math8.rs  transition.rs
