[package]
name = "myrtio-light-composer"
description = "1D LED rendering library"
version = "0.6.0"
publish = true
license = "MIT"
edition = "2024"
rust-version = "1.90"

[lib]
name = "myrtio_light_composer"

[[example]]
name = "preview"
path = "examples/preview"

[dependencies]
critical-section = "1.2"
embassy-time = "0.5.0"
heapless = "0.8"
libm = "0.2.15"
smart-leds = "0.4.0"

# Optional dependencies
esp-println = { version = "0.16.1", optional = true, features = ["esp32"] }

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }
embassy-time = { version = "0.5.0", features = ["std"] }

[features]
default = []
esp32-log = ["dep:esp-println"]


[lints.rust]
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(codspeed)"] }

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
items_after_statements = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
uninlined_format_args = "allow"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
redundant_clone = "warn"
debug_assert_with_mut_call = "warn"
unused_peekable = "warn"
large_stack_arrays = "allow"
