[package]
name = "myrtio-light-preview"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2024"
rust-version = "1.90"

[[bin]]
name = "myrtio-light-preview"
path = "src/main.rs"

[dependencies]
myrtio-light-composer = { path = "../" }
critical-section = { version = "1.2", features = ["std"] }
eframe = "0.31"
embassy-time = { version = "0.5.0", features = ["std"] }










